# father_humor

./: .coverage  README.md  dad_jokes.text  pyproject.toml  requirements.txt  star_wars.text
src/father_humor_package/: example.py
src/father_humor_pip_package/: README.md  dad_jokes.text  help.py  main.py  programming.text  scraper.py  star_wars.text
tests/: programming.text  star_wars.text  tests_scraping.py
