[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "father_humor_pip_package"
version = "0.0.9"
authors = [
  { name="Anthony Hill", email="author@example.com" },
  { name="Brian Tarte", email="author@example.com" },
  { name="Ibraheem Ibraheem", email="author@example.com" },
  { name="Brendon Hampton", email="brendonhampton1988@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"