[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "father_humor_pip_package"
version = "0.0.1"
authors = [
  { name="Anthony Hill", email="anthonyhilldeveloper@gmail.com" },
  { name="Brian Tarte", email="author@example.com" },
  { name="Ibraheem Ibraheem", email="iibraheem2001@gmail.com" },
  { name="Brendon Hampton", email="brendonhampton1988@gmail.com" },
]
description = "A small example package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/TheYoungAndTheRESTless/father_humor"
"Bug Tracker" = "https://github.com/orgs/TheYoungAndTheRESTless/projects/1/views/1"